# advent-of-code

./: .gitignore  Cargo.toml  README.md  clippy.toml  makefile
2015/: 02b.rs  03a.rs  04a.rs  06a.rs  07a.rs  07b.rs  08b.rs  10a.rs  10b.rs  13b.rs  14a.rs  14b.rs  Cargo.toml  day-12-cheat.js
2015/src/: 01a.rs  01b.rs  02a.rs  02b.rs  03b.rs  04b.rs  05a.rs  05b.rs  06a.rs  06b.rs  07a.rs  07b.rs  08a.rs  09a.rs  09b.rs  11a.rs  11b.rs  12a.rs  13a.rs  13b.rs  14a.rs  14b.rs
2016/: Cargo.toml  day-01-b.rs  day-02-a.rs  day-03-a.rs  day-03-b.rs
2016/src/: day-01-a.rs  day-02-b.rs
2021/: Cargo.toml  day-03-a.rs  day-04-b.rs  day-05-a.rs  day-05-b.rs  day-06-a.rs  day-07-a.rs  day-08-a.rs  day-10-a.rs  day-11-b.rs  day-14-a.rs  helpers.rs
2021/src/: day-01-a.rs  day-01-b.rs  day-03-b.rs  day-04-a.rs  day-04-b.rs  day-05-a.rs  day-05-b.rs  day-06-a.rs  day-06-b.rs  day-07-a.rs  day-07-b.rs  day-08-a.rs  day-08-b.rs  day-09-a.rs  day-09-b.rs  day-10-a.rs  day-10-b.rs  day-11-a.rs  day-11-b.rs  day-12-a.rs  day-12-b.rs  day-13-a.rs  day-13-b.rs  day-14-a.rs  day-14-b.rs  day-15-a.rs
2022/: Cargo.toml  day-03-a.rs  day-03-b.rs  day-05-a.rs  day-06-a.rs  day-06-b.rs  day-07-a.rs  day-07-b.rs  day-08-a.rs  day-08-b.rs
2022/src/: base.rs  day-01-a.rs  day-01-b.rs  day-02-a.rs  day-02-b.rs  day-03-a.rs  day-03-b.rs  day-04-a.rs  day-04-b.rs  day-05-a.rs  day-05-b.rs  day-06-a.rs  day-06-b.rs  day-07-a.rs  day-07-b.rs  day-08-a.rs  day-08-b.rs  day-09-a.rs
2023/: Cargo.toml  day-01-a.rs  day-01-b.rs  day-02-a.rs  day-02-b.rs  day-03-a.rs  day-04-a.rs  day-06-a.rs  day-06-b.rs  day-07-b.rs
2023/src/: day-01-a.rs  day-01-b.rs  day-03-b.rs  day-04-b.rs  day-05-a.rs  day-05-b.rs  day-07-a.rs  day-08-a.rs  day-08-b.rs  day-09-a.rs  day-09-b.rs
2024/: Cargo.toml  base.rs  day-01-b.rs  day-02-a.rs  day-02-b.rs  day-03-a.lua  day-03-b.lua  day-04-a.rs  day-04-b.rs  day-05-a.lua  day-05-b.lua  day-06-b.rs  day-08-b.rs  day-09-b.rs
2024/src/: day-01-a.rs  day-06-a.rs  day-06-b.rs  day-07-a.rs  day-07-b.rs  day-08-a.rs  day-09-a.rs
2025/day_01/src/: part_a.c  part_b.c
2025/day_02/src/: part_a.c  part_b.c
2025/day_03/: compile_flags.txt
2025/day_03/src/: part_a.c  part_b.c
2025/day_04/: deno.json  part_a.ts  part_b.ts
2025/day_05/: Makefile
2025/day_05/src/: part_a.c  part_b.c
2025/day_06/: part_a.ts  part_b.ts
2025/day_07/: part_a.ts  part_b.ts
2025/day_08/: part_a.ts  part_b.ts
2025/day_09/: part_a.ts  part_b.ts
2025/day_10/: part_a.ts
input_loader/src/: lib.rs
src/: day-01-b.rs  day-02-a.rs  day-02-b.rs  day-03-a.rs  day-03-b.rs  day-07-b.rs  day-08-b.rs  day-11-b.rs  day-12-a.rs  day-12-b.rs
