[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "01a"
path = "src/day-01-a.rs"

[[bin]]
name = "01b"
path = "src/day-01-b.rs"

[[bin]]
name = "02a"
path = "src/day-02-a.rs"

[[bin]]
name = "02b"
path = "src/day-02-b.rs"

[[bin]]
name = "03a"
path = "src/day-03-a.rs"

[[bin]]
name = "03b"
path = "src/day-03-b.rs"

[[bin]]
name = "04a"
path = "src/day-04-a.rs"

[[bin]]
name = "04b"
path = "src/day-04-b.rs"

[[bin]]
name = "05a"
path = "src/day-05-a.rs"

[[bin]]
name = "05b"
path = "src/day-05-b.rs"

[[bin]]
name = "06a"
path = "src/day-06-a.rs"

[[bin]]
name = "06b"
path = "src/day-06-b.rs"

