[package]
name = "advent-of-code-2015"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }
md5 = "0.7.0"

[[bin]]
name = "2015-01a"
path = "src/01a.rs"

[[bin]]
name = "2015-01b"
path = "src/01b.rs"

[[bin]]
name = "2015-02a"
path = "src/02a.rs"

[[bin]]
name = "2015-02b"
path = "src/02b.rs"

[[bin]]
name = "2015-03a"
path = "src/03a.rs"

[[bin]]
name = "2015-03b"
path = "src/03b.rs"

[[bin]]
name = "2015-04a"
path = "src/04a.rs"

[[bin]]
name = "2015-04b"
path = "src/04b.rs"

[[bin]]
name = "2015-05a"
path = "src/05a.rs"

[[bin]]
name = "2015-05b"
path = "src/05b.rs"

[[bin]]
name = "2015-06a"
path = "src/06a.rs"

[[bin]]
name = "2015-06b"
path = "src/06b.rs"

[[bin]]
name = "2015-07a"
path = "src/07a.rs"

[[bin]]
name = "2015-07b"
path = "src/07b.rs"
