[package]
name = "advent-of-code-2015"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }
md5 = "0.7.0"

[[bin]]
name = "2015-01a"
path = "src/01a.rs"

[[bin]]
name = "2015-01b"
path = "src/01b.rs"

[[bin]]
name = "2015-02a"
path = "src/02a.rs"

[[bin]]
name = "2015-02b"
path = "src/02b.rs"

[[bin]]
name = "2015-03a"
path = "src/03a.rs"

[[bin]]
name = "2015-03b"
path = "src/03b.rs"

[[bin]]
name = "2015-04a"
path = "src/04a.rs"

[[bin]]
name = "2015-04b"
path = "src/04b.rs"

[[bin]]
name = "2015-05a"
path = "src/05a.rs"

[[bin]]
name = "2015-05b"
path = "src/05b.rs"

[[bin]]
name = "2015-06a"
path = "src/06a.rs"

[[bin]]
name = "2015-06b"
path = "src/06b.rs"

[[bin]]
name = "2015-07a"
path = "src/07a.rs"

[[bin]]
name = "2015-07b"
path = "src/07b.rs"

[[bin]]
name = "2015-08a"
path = "src/08a.rs"

[[bin]]
name = "2015-08b"
path = "src/08b.rs"

[[bin]]
name = "2015-09a"
path = "src/09a.rs"

[[bin]]
name = "2015-09b"
path = "src/09b.rs"

[[bin]]
name = "2015-10a"
path = "src/10a.rs"

[[bin]]
name = "2015-10b"
path = "src/10b.rs"

[[bin]]
name = "2015-11a"
path = "src/11a.rs"

[[bin]]
name = "2015-11b"
path = "src/11b.rs"

[[bin]]
name = "2015-12a"
path = "src/12a.rs"

[[bin]]
name = "2015-13a"
path = "src/13a.rs"

[[bin]]
name = "2015-13b"
path = "src/13b.rs"

[[bin]]
name = "2015-14a"
path = "src/14a.rs"

[[bin]]
name = "2015-14b"
path = "src/14b.rs"
