[package]
name = "advent-of-code-2015"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }
md5 = "0.7.0"

[[bin]]
name = "2015-01a"
path = "01a.rs"

[[bin]]
name = "2015-01b"
path = "01b.rs"

[[bin]]
name = "2015-02a"
path = "02a.rs"

[[bin]]
name = "2015-02b"
path = "02b.rs"

[[bin]]
name = "2015-03a"
path = "03a.rs"

[[bin]]
name = "2015-03b"
path = "03b.rs"

[[bin]]
name = "2015-04a"
path = "04a.rs"

[[bin]]
name = "2015-04b"
path = "04b.rs"

[[bin]]
name = "2015-05a"
path = "05a.rs"

[[bin]]
name = "2015-05b"
path = "05b.rs"

[[bin]]
name = "2015-06a"
path = "06a.rs"

[[bin]]
name = "2015-06b"
path = "06b.rs"

[[bin]]
name = "2015-07a"
path = "07a.rs"

[[bin]]
name = "2015-07b"
path = "07b.rs"

[[bin]]
name = "2015-08a"
path = "08a.rs"

[[bin]]
name = "2015-08b"
path = "08b.rs"

[[bin]]
name = "2015-09a"
path = "09a.rs"

[[bin]]
name = "2015-09b"
path = "09b.rs"

[[bin]]
name = "2015-10a"
path = "10a.rs"

[[bin]]
name = "2015-10b"
path = "10b.rs"

[[bin]]
name = "2015-11a"
path = "11a.rs"

[[bin]]
name = "2015-11b"
path = "11b.rs"

[[bin]]
name = "2015-12a"
path = "12a.rs"

[[bin]]
name = "2015-13a"
path = "13a.rs"

[[bin]]
name = "2015-13b"
path = "13b.rs"

[[bin]]
name = "2015-14a"
path = "14a.rs"

[[bin]]
name = "2015-14b"
path = "14b.rs"
