[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }

[[bin]]
name = "2016-base"
path = "src/base.rs"

[[bin]]
name = "2016-01a"
path = "src/day-01-a.rs"

[[bin]]
name = "2016-01b"
path = "src/day-01-b.rs"

[[bin]]
name = "2016-02a"
path = "src/day-02-a.rs"

[[bin]]
name = "2016-02b"
path = "src/day-02-b.rs"

[[bin]]
name = "2016-03a"
path = "src/day-03-a.rs"

[[bin]]
name = "2016-03b"
path = "src/day-03-b.rs"
