[package]
name = "advent-of-code-2016"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }

[[bin]]
name = "2016-base"
path = "base.rs"

[[bin]]
name = "2016-01a"
path = "day-01-a.rs"

[[bin]]
name = "2016-01b"
path = "day-01-b.rs"

[[bin]]
name = "2016-02a"
path = "day-02-a.rs"

[[bin]]
name = "2016-02b"
path = "day-02-b.rs"

[[bin]]
name = "2016-03a"
path = "day-03-a.rs"

[[bin]]
name = "2016-03b"
path = "day-03-b.rs"
