[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "base"
path = "base.rs"

[[bin]]
name = "2021-01a"
path = "day-01-a.rs"

[[bin]]
name = "2021-01b"
path = "day-01-b.rs"

[[bin]]
name = "2021-02a"
path = "day-02-a.rs"

[[bin]]
name = "2021-02b"
path = "day-02-b.rs"

[[bin]]
name = "2021-03a"
path = "day-03-a.rs"

[[bin]]
name = "2021-03b"
path = "day-03-b.rs"

[[bin]]
name = "2021-04a"
path = "day-04-a.rs"

[[bin]]
name = "2021-04b"
path = "day-04-b.rs"

[[bin]]
name = "2021-05a"
path = "day-05-a.rs"

[[bin]]
name = "2021-05b"
path = "day-05-b.rs"

[[bin]]
name = "2021-06a"
path = "day-06-a.rs"

[[bin]]
name = "2021-06b"
path = "day-06-b.rs"

[[bin]]
name = "2021-07a"
path = "day-07-a.rs"

[[bin]]
name = "2021-07b"
path = "day-07-b.rs"

[[bin]]
name = "2021-08a"
path = "day-08-a.rs"

[[bin]]
name = "2021-08b"
path = "day-08-b.rs"

[[bin]]
name = "2021-09a"
path = "day-09-a.rs"

[[bin]]
name = "2021-09b"
path = "day-09-b.rs"

[[bin]]
name = "2021-10a"
path = "day-10-a.rs"

[[bin]]
name = "2021-10b"
path = "day-10-b.rs"

[[bin]]
name = "2021-11a"
path = "day-11-a.rs"

[[bin]]
name = "2021-11b"
path = "day-11-b.rs"

[[bin]]
name = "2021-12a"
path = "day-12-a.rs"

[[bin]]
name = "2021-12b"
path = "day-12-b.rs"

[[bin]]
name = "2021-13a"
path = "day-13-a.rs"

[[bin]]
name = "2021-13b"
path = "day-13-b.rs"

[[bin]]
name = "2021-14a"
path = "day-14-a.rs"

[[bin]]
name = "2021-14b"
path = "day-14-b.rs"

[[bin]]
name = "2021-15a"
path = "day-15-a.rs"

[[bin]]
name = "2021-15b"
path = "day-15-b.rs"
