[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "2022-base"
path = "src/base.rs"

[[bin]]
name = "2022-01a"
path = "src/day-01-a.rs"

[[bin]]
name = "2022-01b"
path = "src/day-01-b.rs"


[[bin]]
name = "2022-02a"
path = "src/day-02-a.rs"

[[bin]]
name = "2022-02b"
path = "src/day-02-b.rs"

[[bin]]
name = "2022-03a"
path = "src/day-03-a.rs"

[[bin]]
name = "2022-03b"
path = "src/day-03-b.rs"

[[bin]]
name = "2022-04a"
path = "src/day-04-a.rs"

[[bin]]
name = "2022-04b"
path = "src/day-04-b.rs"

[[bin]]
name = "2022-05a"
path = "src/day-05-a.rs"

[[bin]]
name = "2022-05b"
path = "src/day-05-b.rs"