[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2022-base"
path = "src/base.rs"

[[bin]]
name = "2022-01a"
path = "src/day-01-a.rs"

[[bin]]
name = "2022-01b"
path = "src/day-01-b.rs"


[[bin]]
name = "2022-02a"
path = "src/day-02-a.rs"

[[bin]]
name = "2022-02b"
path = "src/day-02-b.rs"

[[bin]]
name = "2022-03a"
path = "src/day-03-a.rs"

[[bin]]
name = "2022-03b"
path = "src/day-03-b.rs"

[[bin]]
name = "2022-04a"
path = "src/day-04-a.rs"

[[bin]]
name = "2022-04b"
path = "src/day-04-b.rs"

[[bin]]
name = "2022-05a"
path = "src/day-05-a.rs"

[[bin]]
name = "2022-05b"
path = "src/day-05-b.rs"

[[bin]]
name = "2022-06a"
path = "src/day-06-a.rs"

[[bin]]
name = "2022-06b"
path = "src/day-06-b.rs"

[[bin]]
name = "2022-07a"
path = "src/day-07-a.rs"

[[bin]]
name = "2022-07b"
path = "src/day-07-b.rs"

[[bin]]
name = "2022-08a"
path = "src/day-08-a.rs"

[[bin]]
name = "2022-08b"
path = "src/day-08-b.rs"

[[bin]]
name = "2022-09a"
path = "src/day-09-a.rs"

[[bin]]
name = "2022-09b"
path = "src/day-09-b.rs"
