[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../libs/rust/input_loader" }

[[bin]]
name = "2023-base"
path = "base.rs"

[[bin]]
name = "2023-01a"
path = "day-01-a.rs"

[[bin]]
name = "2023-01b"
path = "day-01-b.rs"

[[bin]]
name = "2023-02a"
path = "day-02-a.rs"

[[bin]]
name = "2023-02b"
path = "day-02-b.rs"

[[bin]]
name = "2023-03a"
path = "day-03-a.rs"

[[bin]]
name = "2023-03b"
path = "day-03-b.rs"

[[bin]]
name = "2023-04a"
path = "day-04-a.rs"

[[bin]]
name = "2023-04b"
path = "day-04-b.rs"

[[bin]]
name = "2023-05a"
path = "day-05-a.rs"

[[bin]]
name = "2023-05b"
path = "day-05-b.rs"

[[bin]]
name = "2023-06a"
path = "day-06-a.rs"

[[bin]]
name = "2023-06b"
path = "day-06-b.rs"

[[bin]]
name = "2023-07a"
path = "day-07-a.rs"

[[bin]]
name = "2023-07b"
path = "day-07-b.rs"

[[bin]]
name = "2023-08a"
path = "day-08-a.rs"

[[bin]]
name = "2023-08b"
path = "day-08-b.rs"

[[bin]]
name = "2023-09a"
path = "day-09-a.rs"

[[bin]]
name = "2023-09b"
path = "day-09-b.rs"
