[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }

[[bin]]
name = "2024-base"
path = "src/base.rs"

[[bin]]
name = "2024-01a"
path = "src/day-01-a.rs"

[[bin]]
name = "2024-01b"
path = "src/day-01-b.rs"

[[bin]]
name = "2024-02a"
path = "src/day-02-a.rs"

[[bin]]
name = "2024-02b"
path = "src/day-02-b.rs"

[[bin]]
name = "2024-04a"
path = "src/day-04-a.rs"

[[bin]]
name = "2024-04b"
path = "src/day-04-b.rs"

[[bin]]
name = "2024-06a"
path = "src/day-06-a.rs"

[[bin]]
name = "2024-06b"
path = "src/day-06-b.rs"

[[bin]]
name = "2024-07a"
path = "src/day-07-a.rs"

[[bin]]
name = "2024-07b"
path = "src/day-07-b.rs"
