[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
input_loader = { path = "../input_loader" }

[[bin]]
name = "2024-base"
path = "base.rs"

[[bin]]
name = "2024-01a"
path = "day-01-a.rs"

[[bin]]
name = "2024-01b"
path = "day-01-b.rs"

[[bin]]
name = "2024-02a"
path = "day-02-a.rs"

[[bin]]
name = "2024-02b"
path = "day-02-b.rs"

[[bin]]
name = "2024-04a"
path = "day-04-a.rs"

[[bin]]
name = "2024-04b"
path = "day-04-b.rs"

[[bin]]
name = "2024-06a"
path = "day-06-a.rs"

[[bin]]
name = "2024-06b"
path = "day-06-b.rs"

[[bin]]
name = "2024-07a"
path = "day-07-a.rs"

[[bin]]
name = "2024-07b"
path = "day-07-b.rs"

[[bin]]
name = "2024-08a"
path = "day-08-a.rs"

[[bin]]
name = "2024-08b"
path = "day-08-b.rs"

[[bin]]
name = "2024-09a"
path = "day-09-a.rs"

[[bin]]
name = "2024-09b"
path = "day-09-b.rs"
